fixed responsiveness on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -860,7 +860,7 @@ textarea {
   }
 
   .detail-title {
-    font-size: 2.5rem;
+    font-size: 1.75rem;
     line-height: 1.2;
   }
 }
